@@ -29,7 +29,7 @@
     </Company_Info>
     <Program_Info>
         <Program_Name>Quelea</Program_Name>
-        <Program_Version>0.5</Program_Version>
+        <Program_Version>0.5.1</Program_Version>
         <Program_Release_Month />
         <Program_Release_Day />
         <Program_Release_Year />
